appId: in.getcollab.app
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- assertVisible: "GetCollab"
- tapOn: "Sign In"
- inputText: "demo+reviewer@getcollab.in"
- tapOn:
    id: "password"
    optional: true
- inputText: "DemoAccess@123"
- tapOn: "Sign In"
- waitForAnimationToEnd
- assertVisible:
    text: "Dashboard"
    timeout: 15000
    optional: true
